[gd_scene load_steps=4 format=2]

[ext_resource path="res://squid/weapons/BasicShot/basic_shot_projectile.gd" type="Script" id=1]
[ext_resource path="res://resources/yellow_orb.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[node name="BasicShotProjectlie" type="Area2D"]
monitoring = false
collision_layer = 2147483648
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="RayCast2DTop" type="RayCast2D" parent="."]
position = Vector2( 0, -4 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2

[node name="RayCast2DTopReverse" type="RayCast2D" parent="."]
position = Vector2( 0, -4 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2

[node name="RayCast2DBot" type="RayCast2D" parent="."]
position = Vector2( 0, 4 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2

[node name="RayCast2DBotReverse" type="RayCast2D" parent="."]
position = Vector2( 0, 4 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
